FIlter heading in filter content box in mobile and close button style

--- a/src/scss/pages/_helpers.scss
+++ b/src/scss/pages/_helpers.scss
@@ -312,15 +312,13 @@ select:-webkit-autofill:focus {
 
 .txt-wrap {
 	position: relative;
-	.close{
+	.close {
 		display: none;
-		&:before{
-			@include fontawesome;
-			content: "\f00d";
-			right: 0;
-			-webkit-text-stroke: 2px $custome-white;
-			font-size: 22px;
-			top: 5px;
+		&:before {
+			@include break-point(991px){
+				-webkit-text-stroke: 2px #fff;
+				font-size: 22px;
+			}
 		}
 	}
 }
@@ -514,6 +512,7 @@ select:-webkit-autofill:focus {
 	position: absolute;
 	right: 10px;
 	top: 5px;
+	opacity: 0.9;
 	display: none;
 	@include break-point(991px){
 		display: block;
@@ -522,8 +521,16 @@ select:-webkit-autofill:focus {
 		@include fontawesome;
 		content: "\f00d";
 		right: 0;
-		-webkit-text-stroke: 6px $custome-white;
-		font-size: 45px;
+		-webkit-text-stroke: 2px $custome-white;
+		font-size: 22px;
+		top: 5px;
+		@include break-point(991px){
+			@include fontawesome;
+			content: "\f00d";
+			right: 0;
+			-webkit-text-stroke: 5px $custome-white;
+			font-size: 40px;
+		}
 	}
 }
 
@@ -544,5 +551,13 @@ select:-webkit-autofill:focus {
 	justify-content: center;
 	cursor: pointer;
 }
-
+.title-pop-mobile {
+	display: none;
+	font-size: 22px;
+	text-transform: uppercase;
+	padding: 15px 0 20px;
+	@include break-point(991px){
+		display: block;
+	}
+}
 
