--- a/src/scss/pages/_offer-details.scss
+++ b/src/scss/pages/_offer-details.scss
@@ -2,13 +2,10 @@
 .offer-details{
 	.thumb{
 		margin: 15px;
+		position: relative;
 		img{
 			width: 100%;
 		}
-	}
-	.fav {
-		top: 20px;
-		right: 25px;
 	}
 	.how-redeem{
 		margin: 0 20px 0 15px;
