--- a/src/scss/pages/_helpers.scss
+++ b/src/scss/pages/_helpers.scss
@@ -322,7 +322,9 @@ select:-webkit-autofill:focus {
 		}
 	}
 }
-
+.form-control:disabled, .form-control[readonly] {
+	background-color: #fff;
+}
 .txt{
 	height: 44px;
 	border-radius: 4px;
