Design update on offer type filter in mobile

--- a/src/scss/pages/_multiselectlist.scss
+++ b/src/scss/pages/_multiselectlist.scss
@@ -47,6 +47,8 @@
 					width: 33.33%;
 					@include break-point(991px){
 						width: 100%;
+						margin-top: 20px;
+						font-size: 15px;
 					}
 				}
 			}
