Progress bar new UI changes

--- a/src/scss/pages/_reward-progress.scss
+++ b/src/scss/pages/_reward-progress.scss
@@ -1,4 +1,10 @@
 //reward box  starts here
+.reward-progress-wrap{
+	.info{
+		margin-bottom: 10px;
+		display: block;
+	}
+}
 .reward-progress{
 	background: $custome-white;
 	box-shadow: 6px 0px 13px -10px rgba(0,0,0,0.35);
@@ -6,13 +12,38 @@
 	margin-bottom: 20px;
 	.progressbar {
 		position: absolute;
-		background-color: #ad1f23;
+		background-color:rgba(173,31,35,0.1);;
 		height: 100%;
-		opacity: 0.1;
 		bottom: 0;
 		@include break-point(767px){
 			width: 100%;
 			top: 0;
+		}
+		&:before{
+			@include fontawesome;
+			content: "\f077";
+			bottom:-7px;
+			right:-7px;
+			font-size:13px;
+			color: $custome-black;
+			@include break-point(767px){
+				content: "\f053";
+				right: 1px;
+			}
+		}
+		span{
+			position: absolute;
+			right: -14px;
+			bottom: 6px;
+			background: #ad1f23;
+			color: #fff;
+			padding: 1px 2px;
+			font-weight: 700;
+			z-index: 999;
+			@include break-point(767px){
+				right: 12px;
+				bottom: -9px;
+			}
 		}
 	}
 	ul{
@@ -48,20 +79,20 @@
 				font-family: 'Montserrat SemiBold';
 				display: block;
 				position: absolute;
-				bottom: 0;
+				top: 0;
 				right: -20px;
 				z-index: 9;
 				@include break-point(767px){
 					bottom: -10px;
-					right: 10px;
+					left: 2px;
+					top:auto;
 				}
 			}
 			samp {
 				left: 0;
 				@include break-point(767px){
 					top: 0;
-					right: 10px;
-					left: auto;
+					left: 0;
 				}
 			}
 		}
