OfferDetails ipad UI issue

--- a/src/scss/pages/_autocomplete.scss
+++ b/src/scss/pages/_autocomplete.scss
@@ -1,5 +1,10 @@
 //autocomplete starts here
 .autocomplete {
+	.close{
+		@include break-point(991px){
+			display: none;
+		}
+	}
 	.form-control-placeholder, .form-control.txt {
 		cursor: default;
 	}
