--- a/src/scss/pages/_offer-details.scss
+++ b/src/scss/pages/_offer-details.scss
@@ -8,7 +8,7 @@
 		}
 	}
 	.how-redeem{
-		margin: 0 20px 0 15px;
+		margin: 15px 20px 0 15px;
 	}
 	.redeem-content{
 		margin-top: 10px;
@@ -63,7 +63,7 @@
 		align-items: flex-end;
 		height: 100%;
 		justify-content: center;
-		
+		text-align: right;
 		>span{
 			margin: 0 0 5px;
 			display: block;
@@ -108,97 +108,19 @@
 			}
 		}
 	}
-}
-
-
-//details 2
-
-
-.offer-details-option{
-	.details-wrap{
-		justify-content: space-between;
-		display: flex;
-		flex-direction: column;
-	}
-	.thumb{
-		margin: 15px;
-		img{
-			width: 100%;
+	.button{
+		padding:11px 20px;
+		@include break-point(767px){
+			width: 92%;
+    		margin: 10px 15px;
 		}
 	}
-	.details-text{
-		margin: 15px;
-		h2{
-			font-size: 22px;
-			margin: 0 0 5px;
-			font-family: 'Montserrat Bold';
-		}
-		h4{
-			font-size: 15px;
-			color: #666;
-			margin-bottom: 15px;
-			a{
-				color:$custome-secondary;
-				font-size: 13px;
-			}
-		}
-	}
-	.details-info{
-		padding: 15px 10px 15px 0;
-		display: flex;
-		width: 100%;
-		align-items: center;
-		justify-content: space-between;
-		@include break-point(991px){
-			align-items: flex-end;
-			justify-content: space-between;
-			flex-direction: column;
-		}
-		>span{
-			margin: 0 0 5px;
-			display: block;
-			strong{
-				font-family: 'Montserrat Bold';
-				display: block;
-				@include break-point(991px){
-					display: inline;
-				}
-			}
-		}
-	}
-	.properties-wrap{
-		position: relative;
-	}
-	.properties-list{
-		background: $custome-black;
-		color: $custome-white;
-		position: absolute;
-		width: auto;
-		box-shadow: rgba(0, 0, 0, 0.9) 0px 0px 4px;
-		padding: 15px 20px;
-		right: 0;
-		display: none;
-		z-index: 999;
-		&:before{
-			@include fontawesome;
-			content: "\f0d8";
-			right:80px;
-			top:-28px;
-			font-size:30px;
-			color: $custome-black;
-		}
-		li{
-			padding: 0 0 10px 20px;
-			position: relative;
-			&:before{
-				width: 7px;
-				height: 7px;
-				background:$custome-white;
-				border-radius: 50%;
-				left: 0;
-				top: 6px;
-				content: "";
-				position: absolute; 
+	.details-propertyselect{
+		margin: 0 15px;
+		.close{
+			right:27px;
+			@include break-point(767px){
+				right:10px;
 			}
 		}
 	}
