--- a/src/scss/pages/_helpers.scss
+++ b/src/scss/pages/_helpers.scss
@@ -575,3 +575,27 @@ select:-webkit-autofill:focus {
 	}
 }
 
+.scroll-top{
+	position: fixed;
+	background: $custome-secondary;
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	bottom: 10px;
+	right: 10px;
+	cursor: pointer;
+	box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.3);
+	display: none;
+	@include break-point(991px){
+
+	}
+	&:before{
+		@include fontawesome;
+		content: "\f106";
+		left: 6px;
+		-webkit-text-stroke: 2px $custome-secondary;
+		font-size: 42px;
+		color: #fff;
+		top: -14px;
+	}
+}
