--- a/src/scss/pages/_helpers.scss
+++ b/src/scss/pages/_helpers.scss
@@ -268,6 +268,21 @@ i{
 			color: $custome-secondary;
 			padding:8px 20px;
 		}
+		&.button-add-to-btn{
+			background: $custome-secondary;
+			padding:8px 20px;
+			border:none;
+			color:$custome-white;
+			font-size: 13px;
+			text-align: center;
+			text-transform:uppercase;
+			transition: all 0.2s ease 0s;
+			border:none;
+			border-radius: 2px;
+			position:relative;
+			font-family: OpenSans-Regular; 
+			border: $custome-secondary solid 1px;
+		}
 	}
 	
 
