Added Apply button to my offers, offer type filter screen in mobile

--- a/src/scss/pages/_multiselectlist.scss
+++ b/src/scss/pages/_multiselectlist.scss
@@ -60,6 +60,13 @@
 			background: #f1f1f6;
 			padding: 10px;
 			text-align: right;
+			.apply-selection {
+				display: none;
+				@include break-point(991px){
+					display: inline-block;
+					margin-left: 10px;
+				}
+			}
 		}
 	}
 }
