--- a/src/scss/pages/_header.scss
+++ b/src/scss/pages/_header.scss
@@ -43,6 +43,7 @@ header{
 				}
 				.userImage {
 					position: relative;
+					cursor: pointer;
 					&:before{
 						@include fontawesome;
 						right: -5px;
@@ -57,6 +58,7 @@ header{
 					}
 				}
 				.username{
+					cursor: pointer;
 					font-size:$primary-fontsize;
 					font-weight: bold;
 					color: $custome-white;
