Added loading spinner

--- a/src/scss/pages/_helpers.scss
+++ b/src/scss/pages/_helpers.scss
@@ -605,3 +605,8 @@ select:-webkit-autofill:focus {
 		top: -14px !important;
 	}
 }
+.loading-spinner-container {
+    width: 100%;
+    text-align: center;
+    color: $custome-secondary;
+}
