--- a/src/scss/pages/_header.scss
+++ b/src/scss/pages/_header.scss
@@ -1,193 +1,191 @@
 //header starts here
-header{
-	background:#141414;
-	align-items:center;
-	display:flex;
-	justify-content:space-between;
-	height:61px;
-	transform: translate3d(0,0,0);
-	position:device-fixed;
-	.logo{
-		margin:0 35px 0 15px;
-		display: flex;
-		@include break-point(991px){
-			width: 56%;
-			justify-content: space-between;
-		}
-	}
-	.top-menu{
-		align-items: center;
-		margin-right:20px;
-		@include break-point(767px){
-			margin-right:10px;
-		}
-		li{
-			position:relative;
-			float:left;
-			&.user{
-				padding:0 10px 0 0;
-				> a{
-					position: relative;
-					&:before{
-						@include fontawesome;
-						right: -8px;
-						top: -3px;
-						content: "\f107";
-						font-size: 18px;
-						font-weight: 700;
-						color: $custome-white;
-						@include break-point(991px){
-							display: none;
-						}
-					}
-				}
-				.userImage {
-					position: relative;
-					cursor: pointer;
-					&:before{
-						@include fontawesome;
-						right: -5px;
-						top: -10px;
-						content: "\f2be";
-						font-size: 25px;
-						font-weight: 700;
-						color: $custome-white;
-						@include break-point(991px){
-							top: -20px;
-						}
-					}
-				}
-				.username{
-					cursor: pointer;
-					font-size:$primary-fontsize;
-					font-weight: bold;
-					color: $custome-white;
-					margin:6px 12px;
-					position:relative;
-					font-family: OpenSans-Regular; 
-					@include break-point(991px){
-						display: none;
-					}
-				}
-			}
-			.sidebar__toggle{
-				background:none;
-				display: none;
-				@include break-point(767px){
-					display: block;
-				}
-			}
-		}
-	}
-	.user-panel{
-		position: absolute;
-		background: $custome-white;
-		border-radius: 5px;
-		padding: 20px;
-		box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 15px;
-		top: calc(100% + 12px);
-		min-width: 400px;
-		right: 50%;
-		background-image: url(/images/user-panel-bg.png);
-		background-size: 33%;
-		background-repeat: no-repeat;
-		font-family: OpenSans-Regular;
-		color: $custome-primary;
-		display: none;
-		@include break-point(991px){
-			position: fixed;
-			height: 100vh;
-			border-radius: 0;
-			right: 0;
-			top: 0;
-			min-width: 320px;
-		}
-		&:before{
-			@include fontawesome;
-			content: "\f0d8";
-			font-size:16px;
-			color: $custome-white;
-			right: 57px;
-			top: -34px;
-			font-size: 36px;
-		}
-		.user-panel__logo{
-			padding-top: 64px;
-			text-align: center;
-			margin-bottom: 15px;
-			img{
-				width: 176px;
-				height: 59px;
-			}
-		}
-		.user-panel__name{
-			text-align: center;
-			font-size: 16px;
-			margin-bottom: 15px;
-			strong{
-				font-family: OpenSans-Bold;
-			}
-		}
-		.user-panel__credits{
-			text-align: center;
-			font-size: 14px;
-			margin-bottom: 15px;
-			strong{
-				font-size: 30px;
-				font-family: OpenSans-Semibold;
-				display: block;
-			}
-		}
-		.user-panel__item{
-			display: flex;
-			flex-direction: column;
-			li{
-				display: flex;
-				justify-content: space-between;
-				padding: 8px 0;
-				border-block-end: #ccc solid 1px;
-				font-size: 16px;
-				&:last-child{
-					border: none;
-				}
-				strong{
-					font-family: OpenSans-Bold;
-					text-transform: uppercase;
-				}
-			}
-		}
-		.btn-wrap{
-			display: flex;
-			flex-direction: column;
-			.button{
-				margin-bottom: 8px;
-				&:hover{
-					background-color: rgb(103, 18, 21);
-					border-color: rgb(103, 18, 21);
-					color: $custome-white;
-				}
-			}
-		}
-		.user-panel__number{
-			display: flex;
-			justify-content: space-between;
-			font-size: 14px;
-			span{
-				max-width: 165px;
-			}
-			.add{
-				color: $custome-secondary;
-				font-size: 12px;
-				text-decoration: underline;
-			}
-		}
-	}
-	.add-to {
-		display: none;
-	}
-	
+header {
+    background: #141414;
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    height: 61px;
+    transform: translate3d(0, 0, 0);
+    position: device-fixed;
+    .logo {
+        margin: 0 35px 0 15px;
+        display: flex;
+        @include break-point(991px) {
+            width: 56%;
+            justify-content: space-between;
+        }
+    }
+    .top-menu {
+        align-items: center;
+        margin-right: 20px;
+        @include break-point(767px) {
+            margin-right: 10px;
+        }
+        li {
+            position: relative;
+            float: left;
+            &.user {
+                padding: 0 10px 0 0;
+                > a {
+                    position: relative;
+                    &:before {
+                        @include fontawesome;
+                        right: -8px;
+                        top: -3px;
+                        content: "\f107";
+                        font-size: 18px;
+                        font-weight: 700;
+                        color: $custome-white;
+                        @include break-point(991px) {
+                            display: none;
+                        }
+                    }
+                }
+                .userImage {
+                    position: relative;
+                    cursor: pointer;
+                    &:before {
+                        @include fontawesome;
+                        right: -5px;
+                        top: -10px;
+                        content: "\f2be";
+                        font-size: 25px;
+                        font-weight: 700;
+                        color: $custome-white;
+                        @include break-point(991px) {
+                            top: -20px;
+                        }
+                    }
+                }
+                .username {
+                    cursor: pointer;
+                    font-size: $primary-fontsize;
+                    font-weight: bold;
+                    color: $custome-white;
+                    margin: 6px 12px;
+                    position: relative;
+                    font-family: OpenSans-Regular;
+                    @include break-point(991px) {
+                        display: none;
+                    }
+                }
+            }
+            .sidebar__toggle {
+                background: none;
+                display: none;
+                @include break-point(767px) {
+                    display: block;
+                }
+            }
+        }
+    }
+    .user-panel {
+        position: absolute;
+        background: $custome-white;
+        border-radius: 5px;
+        padding: 20px;
+        box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 15px;
+        top: calc(100% + 12px);
+        min-width: 400px;
+        right: 50%;
+        background-image: url(/images/user-panel-bg.png);
+        background-size: 33%;
+        background-repeat: no-repeat;
+        font-family: OpenSans-Regular;
+        color: $custome-primary;
+        display: none;
+        @include break-point(991px) {
+            position: fixed;
+            height: 100vh;
+            border-radius: 0;
+            right: 0;
+            top: 0;
+            min-width: 320px;
+        }
+        &:before {
+            @include fontawesome;
+            content: "\f0d8";
+            font-size: 16px;
+            color: $custome-white;
+            right: 57px;
+            top: -34px;
+            font-size: 36px;
+        }
+        .user-panel__logo {
+            padding-top: 64px;
+            text-align: center;
+            margin-bottom: 15px;
+            img {
+                width: 176px;
+                height: 59px;
+            }
+        }
+        .user-panel__name {
+            text-align: center;
+            font-size: 16px;
+            margin-bottom: 15px;
+            strong {
+                font-family: OpenSans-Bold;
+            }
+        }
+        .user-panel__credits {
+            text-align: center;
+            font-size: 14px;
+            margin-bottom: 15px;
+            strong {
+                font-size: 30px;
+                font-family: OpenSans-Semibold;
+                display: block;
+            }
+        }
+        .user-panel__item {
+            display: flex;
+            flex-direction: column;
+            li {
+                display: flex;
+                justify-content: space-between;
+                padding: 8px 0;
+                border-block-end: #ccc solid 1px;
+                font-size: 16px;
+                &:last-child {
+                    border: none;
+                }
+                strong {
+                    font-family: OpenSans-Bold;
+                    text-transform: uppercase;
+                }
+            }
+        }
+        .btn-wrap {
+            display: flex;
+            flex-direction: column;
+            .button {
+                margin-bottom: 8px;
+                &:hover {
+                    background-color: rgb(103, 18, 21);
+                    border-color: rgb(103, 18, 21);
+                    color: $custome-white;
+                }
+            }
+        }
+        .user-panel__number {
+            display: flex;
+            justify-content: space-between;
+            font-size: 14px;
+            span {
+                max-width: 165px;
+            }
+            .add {
+                color: $custome-secondary;
+                font-size: 12px;
+                text-decoration: underline;
+            }
+        }
+        &.open {
+            display: block;
+        }
+    }
+    .add-to {
+        display: none;
+    }
 }
-
-
-
-
