--- a/src/scss/pages/_autocomplete.scss
+++ b/src/scss/pages/_autocomplete.scss
@@ -1,119 +1,137 @@
 //autocomplete starts here
 .autocomplete {
-	.close{
-		@include break-point(991px){
-			display: none;
-		}
-	}
-	.form-control-placeholder, .form-control.txt {
-		cursor: default;
-	}
-	.form-control.txt:focus {
-		cursor: text;
-	}
-	.autocomplete-content {
-		background: $custome-white;
-		position: absolute;
-		width: 100%;
-		max-height: 420px;
-		overflow-y: auto;
-		right: 0;
-		box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 15px 0px;
-		display: none;
-		z-index: 99;
-		cursor: pointer;
-		@include break-point(991px){
-			max-height: none;
-			height: 100vh;
-			overflow-y: scroll;
-		}
-		.autocomplete__list {
-			padding: 10px 0px;
-			ul.autocomplete__listwrap {
-				@include break-point(991px){
-					margin-bottom: 120px;
-				}
-			}
-			li {
-				padding: 10px 0 10px 20px;
-				&:hover{
-					background:#f1f1f6;
-				}
-				span{
-					margin-left: 20px;
-					font-size: 14px;
-					color: #343840;
-					display: block;
-				}
-				&.highlight{
-					span{
-						margin-left: 0px;
-						text-transform: uppercase;
-						position: relative;
-						padding-left: 9px;
-						&:before{
-							@include fontawesome;
-							content: "\f041";
-							left:-8px;
-							top:-4px;
-							font-size:18px;
-							color: #343840;
-						}
-					}
-				}
-				&[data-display="false"] { 
-					display : none 
-				}
-				&[data-display="true"] { 
-					display : inherit 
-				}
-				&[data-highlight="false"] {
-					background-color: none;
-				}
-				&[data-highlight="true"] {
-					background-color: rgb(241, 241, 246);;
-				}
-				&[data-selected="true"] {
-					font-family: 'Montserrat Bold';
-				}
-			}
-		}
-	}
-	&.active {
-		.autocomplete-content {
-			display: block;
-		}
-		.close {
-			display: block;
-			cursor: pointer;
-			z-index: 9;
-			&:before {
-				right: 10px;
-				top: 7px;
-			}
-		}
-		@include break-point(991px){
-			background: #fff;
-			position: fixed;
-			top: 0;
-			z-index: 9999;
-			width: 100%;
-			left: 0;
-			padding: 20px 10px 0 10px;
-			.txt{
-				border: none;
-				border-bottom: #ced4da solid 1px;
-				&:focus{
-					border: none;
-					border-bottom: #ced4da solid 1px;
-					box-shadow: none;
-				}
-			}
-		}
-		.select-wrap{
-			&:after{
-				display: none;
-			}
-		}
-	}
+    .close {
+        display: none;
+        cursor: pointer;
+        z-index: 9;
+        &:before {
+            right: 10px;
+            top: 7px;
+        }
+    }
+    .form-control-placeholder,
+    .form-control.txt {
+        cursor: default;
+    }
+    .form-control.txt:focus {
+        cursor: text;
+    }
+    .autocomplete-content {
+        background: $custome-white;
+        position: absolute;
+        width: 100%;
+        max-height: 420px;
+        overflow-y: auto;
+        right: 0;
+        box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 15px 0px;
+        display: none;
+        z-index: 99;
+        cursor: pointer;
+        @include break-point(991px) {
+            max-height: none;
+            height: 100vh;
+            overflow-y: scroll;
+        }
+        .autocomplete__list {
+            padding: 10px 0px;
+            ul.autocomplete__listwrap {
+                @include break-point(991px) {
+                    margin-bottom: 120px;
+                }
+            }
+            li {
+                padding: 10px 0 10px 20px;
+                &:hover {
+                    background: #f1f1f6;
+                }
+                span {
+                    margin-left: 20px;
+                    font-size: 14px;
+                    color: #343840;
+                    display: block;
+                }
+                &.highlight {
+                    span {
+                        margin-left: 0px;
+                        text-transform: uppercase;
+                        position: relative;
+                        padding-left: 9px;
+                        &:before {
+                            @include fontawesome;
+                            content: "\f041";
+                            left: -8px;
+                            top: -4px;
+                            font-size: 18px;
+                            color: #343840;
+                        }
+                    }
+                }
+                &[data-display="false"] {
+                    display: none;
+                }
+                &[data-display="true"] {
+                    display: inherit;
+                }
+                &[data-highlight="false"] {
+                    background-color: none;
+                }
+                &[data-highlight="true"] {
+                    background-color: rgb(241, 241, 246);
+                }
+                &[data-selected="true"] {
+                    font-family: "Montserrat Bold";
+                }
+            }
+        }
+    }
+    &.active {
+        .autocomplete-content,
+        .close.close-component {
+            display: block;
+        }
+        @include break-point(991px) {
+            background: #fff;
+            position: fixed;
+            top: 0;
+            z-index: 9999;
+            width: 100%;
+            left: 0;
+            padding: 20px 10px 0 10px;
+            .txt {
+                border: none;
+                border-bottom: #ced4da solid 1px;
+                &:focus {
+                    border: none;
+                    border-bottom: #ced4da solid 1px;
+                    box-shadow: none;
+                }
+            }
+        }
+        .select-wrap {
+            &:after {
+                display: none;
+            }
+        }
+    }
+    &.value-selected {
+        .close.clear-component {
+            display: block;
+            &:before {
+                -webkit-text-stroke: 2px #fff;
+                font-size: 22px;
+                right: 10px;
+                top: 5px;
+            }
+        }
+        .select-wrap {
+            &:after {
+                display: none;
+            }
+        }
+    }
+    &.active.value-selected {
+        .close.clear-component {
+            display: none;
+        }
+    }
 }
