--- a/src/scss/pages/_helpers.scss
+++ b/src/scss/pages/_helpers.scss
@@ -205,6 +205,7 @@ select:-webkit-autofill:focus {
             @include break-point(991px) {
                 -webkit-text-stroke: 2px #fff;
                 font-size: 22px;
+                right: 2px;
             }
         }
     }
