--- a/src/scss/pages/_offer-details.scss
+++ b/src/scss/pages/_offer-details.scss
@@ -1,115 +1,132 @@
 //offer details  starts here
-.offer-details{
-	.thumb{
-		margin: 15px;
-		position: relative;
-		img{
-			width: 100%;
-		}
-	}
-	.how-redeem{
-		margin: 15px 20px 0 15px;
-	}
-	.redeem-content{
-		margin-top: 10px;
-		text-align: justify;
-	}
-	.terms-content{
-		margin-top: 10px;
-		text-align: justify;
-	}
-	.terms{
-		margin: 0 20px 0 15px;
-	}
-	.details-text{
-		margin: 15px;
-		h2{
-			font-size: 22px;
-			margin: 0 0 5px;
-			font-family: 'Montserrat Bold';
-		}
-		h4{
-			font-size: 15px;
-			color: #666;
-			margin-bottom: 15px;
-			a{
-				color:$custome-secondary;
-				font-size: 13px;
-			}
-		}
-	}
-	.details-info{
-		padding: 15px 10px 15px 0;
-		display: flex;
-		flex-direction: column;
-		align-items: flex-end;
-		height: 100%;
-		justify-content: center;
-		text-align: right;
-		>span{
-			margin: 0 0 5px;
-			display: block;
-			strong{
-				font-family: 'Montserrat Bold';
-			}
-		}
-	}
-	.properties-wrap{
-		position: relative;
-	}
-	.properties-list{
-		background: $custome-black;
-		color: $custome-white;
-		position: absolute;
-		width: auto;
-		box-shadow: rgba(0, 0, 0, 0.9) 0px 0px 4px;
-		padding: 15px 20px;
-		right: 0;
-		display: none;
-		z-index: 999;
-		&:before{
-			@include fontawesome;
-			content: "\f0d8";
-			right:200px;
-			top:-28px;
-			font-size:30px;
-			color: $custome-black;
-		}
-		li{
-			padding: 0 0 10px 20px;
-			position: relative;
-			&:before{
-				width: 7px;
-				height: 7px;
-				background:$custome-white;
-				border-radius: 50%;
-				left: 0;
-				top: 6px;
-				content: "";
-				position: absolute; 
-			}
-		}
-	}
-	.button{
-		padding:11px 20px;
-		@include break-point(767px){
-			width: 92%;
-    		margin: 10px 15px;
-		}
-	}
-	.details-propertyselect {
-		margin: 0 15px;
-		.close {
-			right:27px;
-			@include break-point(767px){
-				right:10px;
-			}
-		}
-		.autocomplete .autocomplete-content li.autocomplete__item.highlight.disabled {
-			pointer-events: none;
-			opacity: 0.6;
-			cursor: text;
-			color: gray;
-		}
-	}
+.offer-details {
+    .thumb {
+        margin: 15px;
+        position: relative;
+        img {
+            width: 100%;
+        }
+    }
+    .how-redeem {
+        margin: 15px 20px 0 15px;
+    }
+    .redeem-content {
+        margin-top: 10px;
+        text-align: justify;
+    }
+    .terms-content {
+        margin-top: 10px;
+        text-align: justify;
+    }
+    .terms {
+        margin: 0 20px 0 15px;
+    }
+    .details-text {
+        margin: 15px;
+        h2 {
+            font-size: 22px;
+            margin: 0 0 5px;
+            font-family: "Montserrat Bold";
+        }
+        h4 {
+            font-size: 15px;
+            color: #666;
+            margin-bottom: 15px;
+            a {
+                color: $custome-secondary;
+                font-size: 13px;
+            }
+        }
+    }
+    .details-info {
+        padding: 15px 10px 15px 0;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        height: 100%;
+        justify-content: center;
+        text-align: right;
+        > span {
+            margin: 0 0 5px;
+            display: block;
+            strong {
+                font-family: "Montserrat Bold";
+            }
+        }
+    }
+    .properties-wrap {
+        position: relative;
+    }
+    .properties-list {
+        background: $custome-black;
+        color: $custome-white;
+        position: absolute;
+        width: auto;
+        box-shadow: rgba(0, 0, 0, 0.9) 0px 0px 4px;
+        padding: 15px 20px;
+        right: 0;
+        display: none;
+        z-index: 999;
+        &:before {
+            @include fontawesome;
+            content: "\f0d8";
+            right: 200px;
+            top: -28px;
+            font-size: 30px;
+            color: $custome-black;
+        }
+        li {
+            padding: 0 0 10px 20px;
+            position: relative;
+            &:before {
+                width: 7px;
+                height: 7px;
+                background: $custome-white;
+                border-radius: 50%;
+                left: 0;
+                top: 6px;
+                content: "";
+                position: absolute;
+            }
+        }
+    }
+    .button {
+        padding: 11px 20px;
+        @include break-point(767px) {
+            width: 92%;
+            margin: 10px 15px;
+        }
+    }
+    .details-propertyselect {
+        margin: 0 15px;
+        .close {
+            right: 27px;
+            @include break-point(767px) {
+                right: 10px;
+            }
+        }
+        .autocomplete {
+            .close.clear-component {
+                display: none;
+            }
+            .select-wrap {
+                &:after {
+                    display: block;
+                }
+            }
+            .autocomplete-content li.autocomplete__item.highlight.disabled {
+                pointer-events: none;
+                opacity: 0.6;
+                cursor: text;
+                color: gray;
+            }
+            &.active {
+                .select-wrap {
+                    &:after {
+                        display: none;
+                    }
+                }
+            }
+        }
+    }
 }
