Added disabled attribute to autocomplete list items and avoided select and keypress event for disabled items

--- a/src/scss/pages/_autocomplete.scss
+++ b/src/scss/pages/_autocomplete.scss
@@ -81,6 +81,12 @@
                 &[data-selected="true"] {
                     font-family: "Montserrat Bold";
                 }
+                &[data-disabled="true"] {
+                    pointer-events: none;
+                    opacity: 0.6;
+                    cursor: text;
+                    color: gray;
+                }
             }
         }
     }
