--- a/src/scss/pages/_listing.scss
+++ b/src/scss/pages/_listing.scss
@@ -1,100 +1,106 @@
 //listing  starts here
-.listing{
-	li {
-		margin-bottom: 15px;
-	}
-	.listing-wrap{
-		display: flex;
-		flex-direction: column;
-		justify-content: space-between;
-		height: 100%;
-		background: #fff;
-		padding: 5px;
-		box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 4px;
-	}
-	.listing__img{
-		position: relative;
-		overflow: hidden;
-		margin-bottom: 20px;
-		@include break-point(767px){
-			margin-bottom: 10px;
-		}
-		.thumb{
-			width: 100%;
-		}
-		.img-info{
-			position: absolute;
-			bottom: 0;
-			color: $custome-white;
-			width: 100%;
-			background:  rgba(0, 0, 0, 0.5);
-			padding: 15px 10px;
-			h5{
-				font-size: 15px;
-				font-weight: normal;
-				margin-bottom: 5px;
-			}
-			.offer-code{
-				padding: 3px 5px;
-				background: #f0c04d;
-				color: $custome-black;
-				font-size: 12px;
-				strong{
-					font-weight: 700;
-				}
-			}
-		}
-	}
-	.listing__details{
-		h2{
-			font-size: 15px;
-			font-weight: normal;
-			margin-bottom: 5px;
-		}
-		.date{
-			font-size: $primary-fontsize;
-			color: #666;
-			display: block;
-			margin-bottom: 20px;
-			@include break-point(767px){
-				margin-bottom: 10px;
-			}
-		}
-	}
-	.button{
-		width: 100%;
-		display: block;
-	}
+.listing {
+    li {
+        margin-bottom: 15px;
+    }
+    .listing-wrap {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 100%;
+        background: #fff;
+        padding: 5px;
+        box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 4px;
+    }
+    .listing__img {
+        position: relative;
+        overflow: hidden;
+        margin-bottom: 20px;
+        @include break-point(767px) {
+            margin-bottom: 10px;
+        }
+        .thumb {
+            width: 100%;
+        }
+        .img-info {
+            position: absolute;
+            bottom: 0;
+            color: $custome-white;
+            width: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            padding: 15px 10px;
+            h5 {
+                font-size: 15px;
+                font-weight: normal;
+                margin-bottom: 5px;
+                @include break-point(1199px) {
+                    min-height: 36px;
+                }
+                @include break-point(991px) {
+                    min-height: auto;
+                }
+            }
+            .offer-code {
+                padding: 3px 5px;
+                background: #f0c04d;
+                color: $custome-black;
+                font-size: 12px;
+                strong {
+                    font-weight: 700;
+                }
+            }
+        }
+    }
+    .listing__details {
+        h2 {
+            font-size: 15px;
+            font-weight: normal;
+            margin-bottom: 5px;
+        }
+        .date {
+            font-size: $primary-fontsize;
+            color: #666;
+            display: block;
+            margin-bottom: 20px;
+            @include break-point(767px) {
+                margin-bottom: 10px;
+            }
+        }
+    }
+    .button {
+        width: 100%;
+        display: block;
+    }
 }
 
-.listing--reward{
-	.listing-wrap{
-		padding: 15px 5px;
-		-webkit-box-shadow: 0px 0px 10px -2px rgba(0,0,0,0.30);
-		-moz-box-shadow: 0px 0px 10px -2px rgba(0,0,0,0.30);
-		box-shadow: 0px 0px 10px -2px rgba(0,0,0,0.30);
-	}
-	h3{
-		font-size: 17px;
-		margin-bottom: 15px;
-	}
-	.listing__details{
-		display: flex;
-		justify-content: space-between;
-		margin-bottom: 20px;
-		h2{
-			width: 270px;
-		}
-		.rate{
-			font-size: 25px;
-			color: $custome-secondary;
-		}
-	}
-	.btn-wrap-double{
-		display: flex;
-		.button{
-			width: 100%;
-			margin: 0 2px;
-		}
-	}
+.listing--reward {
+    .listing-wrap {
+        padding: 15px 5px;
+        -webkit-box-shadow: 0px 0px 10px -2px rgba(0, 0, 0, 0.3);
+        -moz-box-shadow: 0px 0px 10px -2px rgba(0, 0, 0, 0.3);
+        box-shadow: 0px 0px 10px -2px rgba(0, 0, 0, 0.3);
+    }
+    h3 {
+        font-size: 17px;
+        margin-bottom: 15px;
+    }
+    .listing__details {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 20px;
+        h2 {
+            width: 270px;
+        }
+        .rate {
+            font-size: 25px;
+            color: $custome-secondary;
+        }
+    }
+    .btn-wrap-double {
+        display: flex;
+        .button {
+            width: 100%;
+            margin: 0 2px;
+        }
+    }
 }
