Fixed design issue with autocomplete component

--- a/src/scss/pages/_offer-details.scss
+++ b/src/scss/pages/_offer-details.scss
@@ -99,6 +99,7 @@
     }
     .details-propertyselect {
         margin: 0 15px;
+        position: relative;
         .close {
             right: 27px;
             @include break-point(767px) {
