--- a/src/scss/pages/_helpers.scss
+++ b/src/scss/pages/_helpers.scss
@@ -8,42 +8,42 @@
     font-family: "Montserrat Regular";
     font-style: normal;
     font-weight: normal;
-    src: url("../fonts/Montserrat-Regular.woff") format("woff");
+    src: url("../../fonts/Montserrat-Regular.woff") format("woff");
 }
 @font-face {
     font-family: "Montserrat SemiBold";
     font-style: normal;
     font-weight: normal;
-    src: url("../fonts/Montserrat-SemiBold.woff") format("woff");
+    src: url("../../fonts/Montserrat-SemiBold.woff") format("woff");
 }
 @font-face {
     font-family: "Montserrat Bold";
     font-style: normal;
     font-weight: normal;
-    src: url("../fonts/Montserrat-Bold.woff") format("woff");
+    src: url("../../fonts/Montserrat-Bold.woff") format("woff");
 }
 @font-face {
     font-family: "Montserrat Black";
     font-style: normal;
     font-weight: normal;
-    src: url("../fonts/Montserrat-Black.woff") format("woff");
+    src: url("../../fonts/Montserrat-Black.woff") format("woff");
 }
 
 @font-face {
     font-family: OpenSans-Bold;
-    src: url("../fonts/OpenSans-Bold.ttf");
+    src: url("../../fonts/OpenSans-Bold.ttf");
 }
 @font-face {
     font-family: OpenSans-Regular;
-    src: url("../fonts/OpenSans-Regular.ttf");
+    src: url("../../fonts/OpenSans-Regular.ttf");
 }
 @font-face {
     font-family: OpenSans-Light;
-    src: url("../fonts/OpenSans-Light.ttf");
+    src: url("../../fonts/OpenSans-Light.ttf");
 }
 @font-face {
     font-family: OpenSans-Semibold;
-    src: url("../fonts/OpenSans-Semibold.ttf");
+    src: url("../../fonts/OpenSans-Semibold.ttf");
 }
 
 /*  Global Styles
