--- a/src/scss/pages/_sidebar.scss
+++ b/src/scss/pages/_sidebar.scss
@@ -2,12 +2,10 @@
 .sidebar {
     left: 0;
     width: 230px;
-    background: #f8f8f8;
     position: fixed;
-    height: 100%;
-    z-index: 10000;
+    height: 100vh;
+    z-index: 9997;
     transition: all 0.2s ease 0s;
-    top: 61px;
     -webkit-box-shadow: 6px 0px 13px -10px rgba(0, 0, 0, 0.35);
     -moz-box-shadow: 6px 0px 13px -10px rgba(0, 0, 0, 0.35);
     box-shadow: 6px 0px 13px -10px rgba(0, 0, 0, 0.35);
@@ -15,11 +13,17 @@
         left: -240px;
         overflow: auto;
     }
+    .sidebar-wrap {
+        background: #f8f8f8;
+        top: 61px;
+        height: 100%;
+        position: relative;
+    }
     li {
         &.list-group-item {
             padding: 0;
-            background-color: none;
-            border-radius: none;
+            background-color: transparent;
+            border-radius: 0;
             border: none;
             &:last-child {
                 border: none;
