--- a/src/scss/pages/_header.scss
+++ b/src/scss/pages/_header.scss
@@ -7,6 +7,9 @@ header {
     height: 61px;
     transform: translate3d(0, 0, 0);
     position: device-fixed;
+    &.fixed-top {
+        z-index: 9998;
+    }
     .logo {
         margin: 0 35px 0 15px;
         display: flex;
