Scroll issue fix in IOS <Trial 1>

--- a/src/scss/pages/_helpers.scss
+++ b/src/scss/pages/_helpers.scss
@@ -156,7 +156,7 @@ i {
 .freeze {
     @include break-point(991px) {
         overflow: hidden;
-        position: fixed;
+        position: relative;
     }
 }
 
